<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="end"
    android:layout_marginEnd="@dimen/dp_10"
    android:background="@mipmap/icon_my_package_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/dp_10"
    android:paddingTop="@dimen/dp_15">

    <TextView
        android:id="@+id/tx_record"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_10"
        android:text="@string/activity_my_package_record"
        android:textColor="@color/fragment_msg_text1" />

    <TextView
        android:id="@+id/tx_update"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_10"
        android:text="@string/activity_my_package_update"
        android:textColor="@color/fragment_msg_text1" />

    <TextView
        android:id="@+id/tx_find"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dp_10"
        android:text="@string/activity_my_package_find"
        android:textColor="@color/fragment_msg_text1" />
</LinearLayout>
